--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,14 @@
     <link href="%PUBLIC_URL%/reset.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,500" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/font-awesome/css/font-awesome.min.css">
     <title>Jamming app</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to start Jammmming!
     </noscript>
-    
+
     <div id="root"></div>
   </body>
 </html>
